--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,8 @@
                           <input type="text" name="" value="" placeholder="Your email address.">
                 </div>
 <div class="submit">
-  <input type="submit" name="" value="Subscribe">
+  <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> Say Hi</a>
+  
 </div>
 </form>
 
