--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                           <input type="text" name="" value="" placeholder="Your email address.">
                 </div>
 <div class="submit">
-  <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> Say Hi</a>
+  <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJTGmzfrwBkrXWRXBJbWPmJWTMpQShddWLnSdFcSFCzGMMsJnJWLWKpKCZpqGfxSxCcmDnV"> Say Hi</a>
   
 </div>
 </form>
