--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                           <input type="text" name="" value="" placeholder="Your email address.">
                 </div>
 <div class="submit">
-  <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJTGmzfrwBkrXWRXBJbWPmJWTMpQShddWLnSdFcSFCzGMMsJnJWLWKpKCZpqGfxSxCcmDnV"> Say Hi</a>
+  <a href="mailto:sharma25vikas@gmail.com?subject-Say Hello!!! class="btn-say"> Say Hi</a>
   
 </div>
 </form>
