--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <header id="header">
 
           <div class="logo">
-            <h1>v i k a s.</h1>
+            <h1>v i k a s</h1>
           </div>
 
-          <div class="menu">
+<!--           <div class="menu">
             <a class="h" href="#">HOME</a>
             <a class="h" href="#">ABOUT</a>
             <a class="h" href="contact.html">CONTACTS</a>
 
-          </div>
+          </div> -->
         </header>
         <div class="home-about">
           <div class="image">
