--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Also love to code.
 
         </div>
 
-        <footer class="footer">
+<!--         <footer class="footer">
           <p class="quto">stay hungary saty foolish</p>
 
           <div class="copyright">
@@ -71,7 +71,7 @@ Also love to code.
         </div>
 
 
-        </footer>
+        </footer> -->
       </div>
 
 
