--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           </div>
 
           <div class="home-about-content">
-            <p class="heading">  Dreamer - Maker - Designer</p>
+            <p class="heading">  Dreamer || Maker || Designer</p>
             <p>Freelancer UI / UX Designer and Full Stack Developer.</p>
 
-            <h3 >Hi, I'm Vikas sharma Freelance Product Designer.<br>Currently curating designs for new startups and founders and <br>
+            <h3 >Hi, I'm Vikas sharma, Freelance Product Designer based in Gurgaon,India  .<br>Currently curating designs for new startups and founders and <br>
 Also love to code.
 </h3>
             <a href="https://dribbble.com/vikasharma"><i class="fa fa-dribbble"></i></a>
