--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           
           <div class="home-about-content">
-            <H2 class="heading">  Dreamer || Maker || Designer</h2>
+            <h2 class="heading">  Dreamer || Maker || Designer</h2>
             <h4>Freelancer UI / UX Designer and Full Stack Developer.</h4>
 
             <p >Hi, I'm Vikas sharma, Freelance Product Designer based in Gurgaon,India  .<br>Currently curating designs for new startups and founders and <br>
