--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="vikas sharma is product designer and illustrator. Currently design products at Freelance "/>
+    <meta name="description" content="vikas sharma is product designer. Currently design products at Freelance "/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <title>vikas sharma - product designer and illustrator</title>
@@ -78,7 +78,7 @@
     <footer>
       <div class="credit">
         <div class="quote">
-          <p>Nothing is easy, Nothing is hard</p>
+          <p>Stay hungry stay follish</p>
         </div>
         <div class="copy">
           <p>&copy; vikas sharma.</p>
